--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
                 <br><br>
                 <p>
                     Due to crushing poverty, countless families in South Asian countries are unable to have their daughters and sisters get married. Unfortunately, due to societal pressures, it is not uncommon for people to resort to extreme measures such as committing suicide. Mangalya makes an effort to support families in these difficult situations by providing basic items necessary for newlywed girls, including dresses, shoes, utensils, bedding, fans, sewing machines, and more, along with some financial assistance to offset marriage expenses. Depending on the region, it costs approximately $200 to $300 to support the marriage of one young woman. We want to join hands with people not only across the country but also globally, where they can donate and become a donor for a bride. By doing so , they can even opt to attend the wedding of their respective bride. We want to arrange the wedding of as many girls as possible, with the number of girls increasing every year. 
-                                                                                                                     - S R Ashni, CEO, Founder of Mangalya
+                                                                                                                     - Kaushik Baruah, CEO, Founder of Mangalya
                 </p>
             </div>
             <div class="img">
