--- a/index.html
+++ b/index.html
@@ -54,6 +54,15 @@
       background-color: red;
       border-radius: 2px;
    }
+   .title h1{
+
+    background: #f7040460;
+	position: absolute;
+    top: 15%;
+    left: 50%;
+	transform: translate(-50%,-40%);
+    height: 35px;
+   }
    #footer{
     
     display: flex;
@@ -124,6 +133,11 @@ footer p{
                 <li><a href="contact.html">CONTACT US</a></li>
             </ul>
         </nav>
+        <div class="title">
+            <h1>
+                MANGALYA
+            </h1>
+        </div>
         <div class="center">
 			<h1>Giving is not just about making a donation,<br> it is about making a difference.</h1>
 			<div class="buttons">
